# qt-plugin-sample

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build-docs.bat  build-docs.sh  build.bat  build.sh  mkdocs.yml  requirements-docs.txt  run_tests.bat  run_tests.sh
examples/: CMakeLists.txt  README.md
examples/component-usage/: CMakeLists.txt  main.cpp
examples/configuration_example/: CMakeLists.txt  configuration_example_plugin.cpp  configuration_example_plugin.hpp  configuration_example_plugin.json  main.cpp
examples/service-plugin/: CMakeLists.txt  README.md  metadata.json
examples/service-plugin/src/: main.cpp  service_plugin.cpp  service_plugin.hpp
examples/service-plugin/tests/: CMakeLists.txt  test_service_plugin_integration.cpp
lib/: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md
lib/cmake/: QtPluginConfig.cmake.in  qtplugin.pc.in
lib/docs/: README.md
lib/docs/api/: README.md
lib/docs/guides/: architecture.md  plugin-development.md
lib/examples/: CMakeLists.txt  README.md
lib/examples/basic_plugin/: CMakeLists.txt  basic_plugin.cpp  basic_plugin.hpp  basic_plugin.json  test_basic_plugin.cpp
lib/include/qtplugin/: components.hpp  qtplugin.hpp  qtplugin_compat.hpp  qtplugin_components.hpp
lib/include/qtplugin/communication/: message_bus.hpp  message_types.hpp  plugin_service_contracts.hpp  plugin_service_discovery.hpp  request_response_system.hpp  typed_event_system.hpp
lib/include/qtplugin/composition/: plugin_composition.hpp
lib/include/qtplugin/core/: enhanced_plugin_interface.hpp  plugin_capability_discovery.hpp  plugin_dependency_resolver.hpp  plugin_interface.hpp  plugin_lifecycle_manager.hpp  plugin_loader.hpp  plugin_manager.hpp  plugin_property_system.hpp  plugin_registry.hpp  service_plugin_interface.hpp
lib/include/qtplugin/interfaces/: data_processor_plugin_interface.hpp  network_plugin_interface.hpp  scripting_plugin_interface.hpp  ui_plugin_interface.hpp
lib/include/qtplugin/managers/: configuration_manager.hpp  configuration_manager_impl.hpp  logging_manager.hpp  logging_manager_impl.hpp  resource_lifecycle.hpp  resource_lifecycle_impl.hpp  resource_manager.hpp  resource_manager_impl.hpp  resource_monitor.hpp  resource_monitor_impl.hpp  resource_pools.hpp
lib/include/qtplugin/monitoring/: plugin_hot_reload_manager.hpp  plugin_metrics_collector.hpp
lib/include/qtplugin/orchestration/: plugin_orchestrator.hpp
lib/include/qtplugin/platform/: platform_error_handler.hpp  platform_performance_monitor.hpp  platform_plugin_loader.hpp
lib/include/qtplugin/security/: security_manager.hpp
lib/include/qtplugin/ui/: ui_plugin_interface.hpp
lib/src/: qtplugin.cpp
lib/src/communication/: message_bus.cpp  plugin_service_contracts.cpp
lib/src/composition/: plugin_composition.cpp
lib/src/core/: enhanced_plugin_interface.cpp  plugin_capability_discovery.cpp  plugin_dependency_resolver.cpp  plugin_interface.cpp  plugin_lifecycle_manager.cpp  plugin_loader.cpp  plugin_manager.cpp  plugin_property_system.cpp  plugin_registry.cpp
lib/src/managers/: configuration_manager.cpp  logging_manager.cpp  resource_lifecycle.cpp  resource_manager.cpp  resource_monitor.cpp
lib/src/monitoring/: README.md  plugin_hot_reload_manager.cpp  plugin_metrics_collector.cpp
lib/src/orchestration/: plugin_orchestrator.cpp
lib/src/security/: security_manager.cpp
lib/src/transactions/: plugin_transaction_manager.cpp
lib/src/utils/: error_handling.cpp  version.cpp
lib/tests/: CMakeLists.txt  mock_metadata.json  test_component_architecture.cpp  test_component_performance.cpp  test_configuration_manager.cpp  test_cross_platform.cpp  test_error_handling.cpp  test_error_handling_simple.cpp  test_expected_comprehensive.cpp  test_manager_component_integration.cpp  test_message_bus.cpp  test_message_bus_simple.cpp  test_metadata.json  test_performance.cpp  test_plugin_interface.cpp  test_plugin_interface_comprehensive.cpp  test_plugin_manager.cpp  test_plugin_manager_comprehensive.cpp  test_plugin_orchestration.cpp  test_resource_management.cpp  test_security_manager.cpp  test_security_manager_simple.cpp  test_service_contracts.cpp  test_version.cpp  test_version_simple.cpp
src/: CMakeLists.txt  main.cpp
src/core/: AdvancedInterfaces.h  PluginCommunicationBus.cpp  PluginCommunicationBus.h  PluginInterface.h  PluginManager.cpp  PluginManager.h  PluginRegistry.cpp  PluginRegistry.h
src/examples/: ExampleDataPlugin.h  ExampleDataPlugin.json  ExampleNetworkPlugin.h  ExampleNetworkPlugin.json  ExampleServicePlugin.h  ExampleServicePlugin.json  ExampleUIPlugin.cpp  ExampleUIPlugin.h  ExampleUIPlugin.json
src/integration/: ExternalToolIntegration.cpp  ExternalToolIntegration.h  PluginCommunication.cpp  PluginCommunication.h  PluginRESTAPI.cpp  PluginRESTAPI.h
src/managers/: ApplicationManager.cpp  ApplicationManager.h  PluginDependencyManager.cpp  PluginDependencyManager.h  PluginMarketplace.h  PluginPerformanceProfiler.cpp  PluginPerformanceProfiler.h  PluginPermissionSystem.cpp  PluginPermissionSystem.h  PluginResourceMonitor.cpp  PluginResourceMonitor.h  PluginSandbox.cpp  PluginSandbox.h  PluginSecurityManager.cpp  PluginSecurityManager.h  PluginSignatureVerifier.cpp  PluginSignatureVerifier.h  PluginUpdateManager.cpp  PluginUpdateManager.h  ThemeManager.cpp  ThemeManager.h
src/ui/: DashboardWidget.cpp  DashboardWidget.h  MainWindow.cpp  MainWindow.h  PluginStoreWidget.cpp  PluginStoreWidget.h  PluginWidgets.cpp  PluginWidgets.h  PluginWizard.cpp  PluginWizard.h  RibbonControls.cpp  RibbonControls.h  RibbonCustomization.h  RibbonInterface.cpp  RibbonInterface.h  RibbonMainWindow.cpp  RibbonMainWindow.h  RibbonThemes.h
src/utils/: PluginCodeAnalyzer.cpp  PluginCodeAnalyzer.h  PluginDebugger.cpp  PluginDebugger.h  PluginHelpers.cpp  PluginHelpers.h  PluginHotReload.cpp  PluginHotReload.h  PluginLiveDebugger.cpp  PluginLiveDebugger.h  PluginTemplateGenerator.cpp  PluginTemplateGenerator.h  PluginTemplateWizard.cpp  PluginTemplateWizard.h  PluginValidator.cpp  PluginValidator.h
tests/: CMakeLists.txt  test_basic.cpp
(+82 files in other folders)
